--- a/app/src/main/res/layout/fragment_course_selection.xml
+++ b/app/src/main/res/layout/fragment_course_selection.xml
@@ -11,4 +11,12 @@
     android:layout_height="match_parent"
     android:text="@string/hello_blank_fragment"/>
 
+  <Button
+    android:id="@+id/navigate_to_history"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/next"
+
+    />
+
 </FrameLayout>
