--- a/app/src/main/res/layout/fragment_course_selection.xml
+++ b/app/src/main/res/layout/fragment_course_selection.xml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".controller.CourseSelectionFragment">
 
   <!-- TODO: Update blank fragment layout -->
-  <TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/hello_blank_fragment"/>
 
   <Button
     android:id="@+id/navigate_to_history"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="145dp"
+    android:layout_height="105dp"
+
+    android:layout_marginStart="132dp"
     android:text="@string/next"
+    app:layout_constraintBottom_toBottomOf="@+id/textView"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.007"
+    app:layout_constraintStart_toStartOf="@+id/textView"
+    app:layout_constraintTop_toTopOf="@+id/textView"/>
+  <TextView
+    android:id="@+id/textView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:text="@string/hello_blank_fragment"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 
-    />
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
