--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,26 +5,17 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.HistoryFragment">
+  tools:context=".controller.LoginActivity">
 
-  <Button
-    android:id="@+id/button_second"
+  <com.google.android.gms.common.SignInButton
+    android:id="@+id/sign_in"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/previous"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/textview_second"
-    />
-
-  <TextView
-    android:id="@+id/textview_second"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@id/button_second"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
+    android:padding="@dimen/login_button_padding"
     app:layout_constraintTop_toTopOf="parent"
-    />
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintVertical_bias="0.4"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
