Updatd Nav,Race Fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,14 +14,14 @@
   </fragment>
 
   <fragment
-    android:id="@+id/navigation_dashboard"
-    android:label="@string/title_dashboard"
-    android:name="edu.cnm.deepdive.myfunrun.controller.ui.dashboard.DashboardFragment"
-    tools:layout="@layout/fragment_dashboard"/>
+    android:id="@+id/navigation_races"
+    android:label="@string/title_races"
+    android:name="edu.cnm.deepdive.myfunrun.controller.ui.dashboard.RacesFragment"
+    tools:layout="@layout/fragment_races"/>
 
   <fragment
     android:id="@+id/navigation_notifications"
-    android:label="@string/title_notifications"
-    android:name="edu.cnm.deepdive.myfunrun.controller.ui.notifications.NotificationsFragment"
-    tools:layout="@layout/fragment_notifications"/>
+    android:label="@string/title_history"
+    android:name="edu.cnm.deepdive.myfunrun.controller.ui.notifications.HistoryFragment"
+    tools:layout="@layout/fragment_history"/>
 </navigation>
