--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -4,8 +4,8 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/container"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:paddingTop="?attr/actionBarSize">
+  android:layout_height="match_parent">
+
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/nav_view"
@@ -21,8 +21,8 @@
 
   <fragment
     android:id="@+id/nav_host_fragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
     android:name="androidx.navigation.fragment.NavHostFragment"
     app:defaultNavHost="true"
     app:layout_constraintBottom_toTopOf="@id/nav_view"
