--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,10 +5,10 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.ui.dashboard.DashboardFragment">
+  tools:context=".controller.ui.notifications.HistoryFragment">
 
   <TextView
-    android:id="@+id/text_dashboard"
+    android:id="@+id/text_notifications"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
