--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,7 +5,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.ui.notifications.HistoryFragment">
+  tools:context=".controller.HistoryFragment">
 
   <TextView
     android:id="@+id/text_notifications"
