--- a/app/src/main/res/layout/fragment_races.xml
+++ b/app/src/main/res/layout/fragment_races.xml
@@ -5,7 +5,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.ui.dashboard.RacesFragment">
+  tools:context=".controller.RaceFragment">
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/race_list"
