--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
   <item
     android:id="@+id/navigation_races"
-    android:icon="@drawable/ic_dashboard_black_24dp"
+    android:icon="@drawable/ic_directions_run_black_24dp"
     android:title="@string/title_races"/>
 
   <item
-    android:id="@+id/navigation_notifications"
-    android:icon="@drawable/ic_notifications_black_24dp"
+    android:id="@+id/navigation_history"
+    android:icon="@drawable/ic_assignment_black_24dp"
     android:title="@string/title_history"/>
 
 </menu>
