--- a/app/src/main/res/layout/fragment_races.xml
+++ b/app/src/main/res/layout/fragment_races.xml
@@ -20,7 +20,7 @@
     app:layout_constraintEnd_toEndOf="parent"/>
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/add_race"
+    android:id="@+id/ADD_HISTORY"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/ic_add"
