Connected fragment to the class

--- a/app/src/main/res/layout/fragment_history_edit.xml
+++ b/app/src/main/res/layout/fragment_history_edit.xml
@@ -12,7 +12,7 @@
     android:padding="8dp">
 
     <Spinner
-      android:id="@+id/race"
+      android:id="@+id/race_spinner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="8dp"
