--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,16 +5,21 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@drawable/home_screen_image"
   tools:context=".controller.HomeFragment">
 
 
   <TextView
-    android:id="@+id/textview_first"
+    android:id="@+id/welcome_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/title_home"
+    android:layout_margin="@dimen/margin_dimens"
+    android:text="@string/welcome_runner"
+    android:textColor="@android:color/holo_red_dark"
+    android:textSize="@dimen/text_size"
+    style="@style/TitleText"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    />
+/>
 </androidx.constraintlayout.widget.ConstraintLayout>
