--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,15 +11,18 @@
 
   <TextView
     android:id="@+id/welcome_text"
+    style="@style/TitleText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_dimens"
+    android:layout_marginTop="552dp"
     android:text="@string/welcome_runner"
     android:textColor="@android:color/holo_red_dark"
     android:textSize="@dimen/text_size"
-    style="@style/TitleText"
-    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintVertical_bias="0.9"
+    app:layout_constraintHorizontal_bias="0.2"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-/>
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
