--- a/app/src/main/res/layout/fragment_history_edit.xml
+++ b/app/src/main/res/layout/fragment_history_edit.xml
@@ -81,7 +81,7 @@
       app:layout_constraintWidth_percent="0.4"
       app:layout_constraintHorizontal_chainStyle="spread_inside">
 
-      <com.google.android.material.textfield.TextInputEditText
+      <TextView
         android:id="@+id/pace"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
