--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -23,7 +23,7 @@
       app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-      android:id="@+id/race"
+      android:id="@+id/race_spinner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="8dp"
