--- a/app/src/main/res/layout/fragment_history_edit.xml
+++ b/app/src/main/res/layout/fragment_history_edit.xml
@@ -19,33 +19,81 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"/>
 
-    <DatePicker
-      android:id="@+id/date"
-      android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/date_layout"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:datePickerMode="spinner"
-      android:calendarViewShown="false"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
+      android:layout_margin="@dimen/margin_dimens"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintTop_toBottomOf="@id/race_spinner"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="@id/start_layout">
 
-    <TimePicker
-      android:id="@+id/start"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:timePickerMode="spinner"
-      app:layout_constraintTop_toBottomOf="@id/date"
-      app:layout_constraintStart_toStartOf="parent"/>
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="none"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="true"
+        android:drawableEnd="@drawable/ic_today_black_24dp"
+        android:hint="Race Date"/>
 
-    <TimePicker
-      android:id="@+id/end"
-      android:layout_width="wrap_content"
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/start_layout"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:timePickerMode="spinner"
-      app:layout_constraintTop_toBottomOf="@id/date"
-      app:layout_constraintEnd_toEndOf="parent"/>
+      android:layout_margin="@dimen/margin_dimens"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/date_layout"
+      app:layout_constraintEnd_toStartOf="@id/end_layout">
+
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/start"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="none"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="true"
+        android:drawableEnd="@drawable/ic_timer_black_24dp"
+        android:hint="Start Time"/>
+
+
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/end_layout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/margin_dimens"
+      app:hintEnabled="true"
+      app:hintAnimationEnabled="true"
+      app:layout_constraintStart_toEndOf="@id/start_layout"
+      app:layout_constraintTop_toBottomOf="@id/date_layout"
+      app:layout_constraintEnd_toEndOf="parent">
+
+      <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/end"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="none"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="true"
+        android:drawableEnd="@drawable/ic_timer_black_24dp"
+        android:hint="End Time"/>
+
+
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/distance_layout"
@@ -55,9 +103,8 @@
       app:hintEnabled="true"
       app:hintAnimationEnabled="true"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/start"
+      app:layout_constraintTop_toBottomOf="@id/start_layout"
       app:layout_constraintEnd_toStartOf="@id/pace_layout"
-      app:layout_constraintWidth_percent="0.4"
       app:layout_constraintHorizontal_chainStyle="spread_inside">
 
       <com.google.android.material.textfield.TextInputEditText
@@ -65,7 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Distance Ran"
-        android:inputType="number"/>
+        android:inputType="numberDecimal"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,19 +123,19 @@
       android:layout_margin="8dp"
       app:hintEnabled="true"
       app:layout_constraintStart_toEndOf="@id/distance_layout"
-      app:layout_constraintTop_toBottomOf="@id/start"
+      app:layout_constraintTop_toBottomOf="@id/start_layout"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintWidth_percent="0.4"
       app:layout_constraintHorizontal_chainStyle="spread_inside">
 
-      <TextView
+      <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/pace"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:inputType="none"/>
+        android:inputType="none"
+        android:hint="Pace"/>
 
 
     </com.google.android.material.textfield.TextInputLayout>
